--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -14,7 +14,7 @@ title = "Late Star"
   dateFormat = "2 January 2006"
 
 [params.author]
-  name = "Vincent Lu"
+  name = "Vincent's Dream Weaver"
   image = "img/blowfish_logo.png"
   headline = "Shine bright like a diamond."
   bio = "A little bit about you"
