--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -16,7 +16,7 @@ title = "Late Star"
 [params.author]
   name = "Vincent Lu"
   image = "img/blowfish_logo.png"
-  headline = "Shine bright like a diamond."
+  headline = "Shine later, but brighter. "
   bio = "A little bit about you"
   # links = [
   #   { email = "mailto:hello@your_domain.com" },
