--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -16,7 +16,7 @@ enableCodeCopy = true
 # robots = ""
 
 [header]
-  layout = "basic" # valid options: basic, fixed
+  layout = "fixed" # valid options: basic, fixed
 
 [footer]
  # showMenu = true
