--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -15,6 +15,11 @@
 #  pageRef = "posts"
 #  weight = 10
 
+[[main]]
+  name = "Blog"
+  pageRef = "posts"
+  weight = 10
+
 #[[main]]
 #  name = "Categories"
 #  pageRef = "categories"
