--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -5,18 +5,18 @@
 # Refer to the theme docs for more details about each of these parameters.
 # https://nunocoracao.github.io/blowfish/docs/configuration/#theme-parameters
 
-colorScheme = "blowfish"
+colorScheme = "slate"
 defaultAppearance = "light" # valid options: light or dark
 autoSwitchAppearance = true
 
 enableSearch = true
 enableCodeCopy = true
 
-# mainSections = ["section1", "section2"]
+mainSections = ["posts"]
 # robots = ""
 
 [header]
-  layout = "fixed" # valid options: basic, fixed
+  layout = "basic" # valid options: basic, fixed
 
 [footer]
  # showMenu = true
@@ -26,20 +26,20 @@ enableCodeCopy = true
   showScrollToTop = true
 
 [homepage]
-  layout = "background" # valid options: page, profile, hero, card, background, custom
+  layout = "profile" # valid options: page, profile, hero, card, background, custom
   #homepageImage = "IMAGE.jpg" # used in: hero, and card
   showRecent = true
   showRecentItems = 5
-  showMoreLink = false
-  showMoreLinkDest = "/posts"
-  cardView = true
+  showMoreLink = true
+  showMoreLinkDest = "/blowfish_lite/posts"
+  cardView = false
   cardViewScreenWidth = false
   layoutBackgroundBlur = false # only used when layout equals background
 
 [article]
   showDate = true
-  #showViews = false
-  #showLikes = false
+  #showViews = true
+  #showLikes = true
   showDateUpdated = false
   showAuthor = true
   showHero = true
@@ -69,6 +69,7 @@ enableCodeCopy = true
   groupByYear = true
   cardView = false
   cardViewScreenWidth = false
+  constrainItemsWidth = true
 
 [sitemap]
   excludedKinds = []
