--- a/config/_default/languages.cn-CN.toml
+++ b/config/_default/languages.cn-CN.toml
@@ -21,7 +21,5 @@ dateFormat = "2 January 2006"
   headline = "更晚的星星会照亮更广阔的夜空。"
   bio = "A little bit about you"
    links = [
-     { link = "https://nunocoracao.github.io/blowfish/" },
-     { github = "https://github.com/nunocoracao/blowfish" },
-     { x-twitter = "https://twitter.com/burufugu" }
+     { github = "https://github.com/vincentluting/vincentluting.github.io" },
    ]
