--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -1,16 +1,14 @@
 # -- Site Configuration --
 # Refer to the theme docs for more details about each of these parameters.
-# https://blowfish.page/docs/getting-started/
+# https://nunocoracao.github.io/blowfish/docs/getting-started/
 
- theme = "blowfish" # UNCOMMENT THIS LINE
+theme = "blowfish"
 # baseURL = "https://your_domain.com/"
 defaultContentLanguage = "en"
 
-# pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
-
 enableRobotsTXT = true
-paginate = 10
-summaryLength = 0
+paginate = 20
+summaryLength = 30
 
 buildDrafts = false
 buildFuture = false
@@ -18,9 +16,6 @@ buildFuture = false
 enableEmoji = true
 
 # googleAnalytics = "G-XXXXXXXXX"
-
-[imaging]
-  anchor = 'Center'
 
 [taxonomies]
   tag = "tags"
@@ -35,33 +30,3 @@ enableEmoji = true
 
 [outputs]
   home = ["HTML", "RSS", "JSON"]
-
-[related]
-  threshold = 0
-  toLower = false
-
-    [[related.indices]]
-        name = "tags"
-        weight = 100
-
-    [[related.indices]]
-        name = "categories"
-        weight = 100
-
-    [[related.indices]]
-        name = "series"
-        weight = 50
-
-    [[related.indices]]
-        name = "authors"
-        weight = 20
-
-    [[related.indices]]
-        name = "date"
-        weight = 10
-
-    [[related.indices]]
-      applyFilter = false
-      name = 'fragmentrefs'
-      type = 'fragments'
-      weight = 10
