--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -26,7 +26,7 @@ mainSections = ["posts"]
   showScrollToTop = true
 
 [homepage]
-  layout = "profile" # valid options: page, profile, hero, card, background, custom
+  layout = "background" # valid options: page, profile, hero, card, background, custom
   #homepageImage = "IMAGE.jpg" # used in: hero, and card
   showRecent = true
   showRecentItems = 5
@@ -38,8 +38,8 @@ mainSections = ["posts"]
 
 [article]
   showDate = true
-  #showViews = true
-  #showLikes = true
+  #showViews = false
+  #showLikes = false
   showDateUpdated = false
   showAuthor = true
   showHero = true
