--- a/config/_default/languages.pt-PT.toml
+++ b/config/_default/languages.pt-PT.toml
@@ -1,13 +1,13 @@
-languageCode = "pt-PT"
-languageName = "Portuguese"
+languageCode = "zh-cn"
+languageName = "中文"
 weight = 2
-title = "Gray Blowfish"
+title = "Vincent Lu"
 contentDir = 'content/pt'
 
 
 [params]
-  displayName = "PT"
-  isoCode = "pt-PT"
+  displayName = "CN"
+  isoCode = "zh-cn"
   rtl = false
   # logo = "img/logo.png"
   description = "O meu website awesome"
@@ -16,12 +16,10 @@ contentDir = 'content/pt'
 dateFormat = "2 January 2006"
 
 [params.author]
-  name = "Gray Blowfish"
+  name = "Vincent Lu"
   image = "img/avatar.png"
-  headline = "Um perfil simples com os meus links"
-  bio = "A little bit about you"
+  headline = "晚星会照亮更广阔的夜空。"
+  bio = "你觉得呢？"
    links = [
-     { link = "https://nunocoracao.github.io/blowfish/" },
-     { github = "https://github.com/nunocoracao/blowfish" },
-     { x-twitter = "https://twitter.com/burufugu" }
+     { github = "https://github.com/vincentluting/vincentluting.github.io" },
    ]
