--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -1,7 +1,7 @@
 languageCode = "en"
 languageName = "English"
 weight = 1
-title = "Gray Blowfish"
+title = "Late Star"
 contentDir = 'content/en'
 
 
@@ -15,10 +15,10 @@ contentDir = 'content/en'
   dateFormat = "2 January 2006"
 
 [params.author]
-  name = "Gray Blowfish"
+  name = "Vincent Lu"
   image = "img/avatar.png"
-  headline = "This is my very simple profile website with my links"
-  bio = "A little bit about you"
+  headline = "Shine later, but brighter."
+  bio = "What do you think?"
    links = [
      { github = "https://github.com/vincentluting/vincentluting.github.io" },
    ]
