--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -15,7 +15,7 @@
   pageRef = "posts"
   weight = 10
 
-[[main]]
+# [[main]]
   identifier = "web"
   pre = "link"
   url = "https://nunocoracao.github.io/blowfish/"
