--- a/config/_default/languages.zh-CN.toml
+++ b/config/_default/languages.zh-CN.toml
@@ -1,12 +1,12 @@
 languageCode = "zh-cn"
-languageName = "中文"
+languageName = "简体中文"
 weight = 2
 title = "晚星"
 contentDir = 'content/pt'
 
 
 [params]
-  displayName = "CN"
+  displayName = "简体中文"
   isoCode = "zh-cn"
   rtl = false
   # logo = "img/logo.png"
