--- a/config/_default/languages.zh-CN.toml
+++ b/config/_default/languages.zh-CN.toml
@@ -2,7 +2,7 @@ languageCode = "zh-cn"
 languageName = "简体中文"
 weight = 2
 title = "晚星"
-contentDir = 'content/pt'
+contentDir = 'content/cn'
 
 
 [params]
