--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -26,8 +26,8 @@
   weight = 20
 
 [[main]]
-  name = "Life"
-  pageRef = "Life"
+  name = "Growth"
+  pageRef = "Growth"
   weight = 10
 
 # [[main]]
