--- a/config/_default/menus.zh-CN.toml
+++ b/config/_default/menus.zh-CN.toml
@@ -11,8 +11,23 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Blog"
-  pageRef = "posts"
+  name = "AI"
+  pageRef = "AI"
+  weight = 20
+
+[[main]]
+  name = "商业战略"
+  pageRef = "商业战略"
+  weight = 20
+
+[[main]]
+  name = "营销"
+  pageRef = "营销"
+  weight = 20
+
+[[main]]
+  name = "成长"
+  pageRef = "成长"
   weight = 10
 
 # [[main]]
