--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -32,9 +32,9 @@ mainSections = ["posts"]
   showRecentItems = 8
   showMoreLink = true
   showMoreLinkDest = "/blowfish_lite/posts"
-  cardView = false
-  cardViewScreenWidth = false
-  layoutBackgroundBlur = false # only used when layout equals background
+  cardView = true
+  cardViewScreenWidth = true
+  layoutBackgroundBlur = true # only used when layout equals background
 
 [article]
   showDate = true
