--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -64,7 +64,7 @@ mainSections = ["posts"]
 [list]
   showBreadcrumbs = false
   showSummary = true
-  showTableOfContents = false
+  showTableOfContents = true
   showCards = false
   groupByYear = true
   cardView = false
