--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -11,29 +11,29 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "AI"
+  name = "Blog"
   pageRef = "Posts"
   weight = 10
 
-[[main]]
-  name = "Tech"
-  pageRef = "Posts"
-  weight = 10
+# [[main]]
+#   name = "Tech"
+#   pageRef = "Posts"
+#   weight = 10
 
-[[main]]
-  name = "Business & Management"
-  pageRef = "Posts"
-  weight = 10
+# [[main]]
+#   name = "Business & Management"
+#   pageRef = "Posts"
+#   weight = 10
 
-[[main]]
-  name = "Marketing"
-  pageRef = "Posts"
-  weight = 10
+# [[main]]
+#   name = "Marketing"
+#   pageRef = "Posts"
+#   weight = 10
 
-[[main]]
-  name = "Growth"
-  pageRef = "Posts"
-  weight = 20
+# [[main]]
+#   name = "Growth"
+#   pageRef = "Posts"
+#   weight = 20
 
 # [[main]]
 #  identifier = "web"
