--- a/config/_default/menus.zh-CN.toml
+++ b/config/_default/menus.zh-CN.toml
@@ -11,29 +11,29 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "AI"
+  name = "博客"
   pageRef = "Posts"
   weight = 10
 
-[[main]]
-  name = "技术"
-  pageRef = "Posts"
-  weight = 10
+# [[main]]
+#   name = "技术"
+#   pageRef = "Posts"
+#   weight = 10
 
-[[main]]
-  name = "商业和管理"
-  pageRef = "Posts"
-  weight = 10
+# [[main]]
+#   name = "商业和管理"
+#   pageRef = "Posts"
+#   weight = 10
 
-[[main]]
-  name = "营销"
-  pageRef = "Posts"
-  weight = 10
+# [[main]]
+#   name = "营销"
+#   pageRef = "Posts"
+#   weight = 10
 
-[[main]]
-  name = "成长"
-  pageRef = "Posts"
-  weight = 20
+# [[main]]
+#   name = "成长"
+#   pageRef = "Posts"
+#   weight = 20
 
 # [[main]]
 #  identifier = "web"
