--- a/config/_default/languages.zh-CN.toml
+++ b/config/_default/languages.zh-CN.toml
@@ -22,5 +22,5 @@ dateFormat = "2 January 2006"
   bio = "你觉得呢？"
    links = [
      { github = "https://github.com/vincentluting/vincentluting.github.io" },
-     { linkedin = "www.linkedin.com/in/ting-lu-vincent" },
+     { linkedin = "https://www.linkedin.com/in/ting-lu-vincent/" },
    ]
