--- a/config/_default/languages.zh-CN.toml
+++ b/config/_default/languages.zh-CN.toml
@@ -19,7 +19,7 @@ dateFormat = "2 January 2006"
   name = "Vincent Lu"
   image = "img/avatar.png"
   headline = "晚星会照亮更广阔的夜空。"
-  bio = "你觉得呢？"
+  bio = "种一棵树，最好是在10年前，其次是现在。"
    links = [
      { github = "https://github.com/vincentluting/vincentluting.github.io" },
      { linkedin = "https://www.linkedin.com/in/ting-lu-vincent/" },
