--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -57,9 +57,9 @@ mainSections = ["posts"]
   showTableOfContents = true
   showTaxonomies = false 
   showAuthorsBadges = false 
-  showWordCount = true
+  showWordCount = false
   showSummary = true
-  sharingLinks = [ "linkedin", "twitter", "whatsapp", "pinterest", "reddit", "facebook", "email"]
+  #sharingLinks = [ "linkedin", "twitter", "whatsapp", "pinterest", "reddit", "facebook", "email"]
 
 [list]
   showBreadcrumbs = false
