--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -18,7 +18,7 @@ contentDir = 'content/en'
   name = "Vincent Lu"
   image = "img/avatar.png"
   headline = "Shine later, but brighter."
-  bio = "The best time to plant a tree is 20 years ago. The second-best time is now."
+  bio = "On a journey toward becoming a soul healer."
    links = [
      { github = "https://github.com/vincentluting/vincentluting.github.io" },
      { linkedin = "https://www.linkedin.com/in/ting-lu-vincent/" },
