--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -18,7 +18,7 @@ contentDir = 'content/en'
   name = "Vincent Lu"
   image = "img/avatar.png"
   headline = "Shine later, but brighter."
-  bio = "Embarking on the journey of becoming a soul healer, guided by the wheel of time and the wavees of technology."
+  bio = "Embarking on the journey of becoming a soul healer, guided by the wheel of time and the waves of technology."
    links = [
      { github = "https://github.com/vincentluting/vincentluting.github.io" },
      { linkedin = "https://www.linkedin.com/in/ting-lu-vincent/" },
