--- a/config/_default/menus.zh-CN.toml
+++ b/config/_default/menus.zh-CN.toml
@@ -12,20 +12,16 @@
 
 [[main]]
   name = "博客"
-  pageRef = "Posts"
+  pageRef = "posts"
   weight = 10
 
-# [[main]]
-#  identifier = "web"
-#  pre = "link"
-#  url = "https://nunocoracao.github.io/blowfish/"
-#  weight = 40
+[[main]]
+  # pre = "circle-info"
+  name = "About"
+  pageRef = "about"
+  # url = "/about"
+  weight = 20
 
-# [[main]]
-#  identifier = "twitter"
-#  pre = "twitter"
-#  url = "https://twitter.com/burufugu"
-#  weight = 60
 
 
 # -- Footer Menu --
