--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -31,7 +31,7 @@
 # the copyright notice. Configure as per the main menu above.
 
 
-# [[footer]]
-#  name = "Tags"
-#  pageRef = "tags"
-#  weight = 10
+[[footer]]
+  name = "Tags"
+  pageRef = "tags"
+  weight = 10
