--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -9,7 +9,7 @@ contentDir = 'content/en'
   displayName = "EN"
   isoCode = "en"
   rtl = false
-  # logo = "img/logo.png"
+  logo = "img/logo.png"
   description = "My awesome website"
   # copyright = "Copy, _right?_ :thinking_face:"
   dateFormat = "2 January 2006"
