--- a/config/_default/languages.zh-CN.toml
+++ b/config/_default/languages.zh-CN.toml
@@ -9,7 +9,7 @@ contentDir = 'content/cn'
   displayName = "简体中文"
   isoCode = "zh-cn"
   rtl = false
-  # logo = "img/logo.png"
+  logo = "img/logo.png"
   description = "O meu website awesome"
   # copyright = "Copy, _right?_ :thinking_face:"
 
