--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -24,6 +24,12 @@
   # url = "/about"
   weight = 50
 
+# [[main]]
+  # pre = "circle-info"
+  # name = "Notes"
+  # pageRef = "Notes"
+  # url = "/about"
+  # weight = 50
 
 
 # -- Footer Menu --
