--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -31,7 +31,7 @@ mainSections = ["posts"]
   showRecent = true
   showRecentItems = 8
   showMoreLink = true
-  showMoreLinkDest = "/blowfish_lite/posts"
+  showMoreLinkDest = "/posts"
   cardView = true
   cardViewScreenWidth = false
   layoutBackgroundBlur = true # only used when layout equals background
