--- a/config/_default/languages.zh-CN.toml
+++ b/config/_default/languages.zh-CN.toml
@@ -18,7 +18,7 @@ dateFormat = "2 January 2006"
 [params.author]
   name = "Vincent Lu"
   image = "img/avatar.png"
-  headline = "晚星会照亮更广阔的夜空。"
+  headline = "晚星照亮更广阔的夜空。"
   bio = "在科技的浪潮下踏上疗愈你我心灵的成长之旅"
    links = [
      { github = "https://github.com/vincentluting/vincentluting.github.io" },
