--- a/config/_default/menus.zh-CN.toml
+++ b/config/_default/menus.zh-CN.toml
@@ -12,14 +12,14 @@
 
 [[main]]
   # pre = "list"
-  name = "Blog"
+  name = "博客"
   pageRef = "posts"
   # url = "/posts"
   weight = 10
 
 [[main]]
   # pre = "circle-info"
-  name = "About"
+  name = "自我介绍"
   pageRef = "about"
   # url = "/about"
   weight = 50
