--- a/config/_default/languages.zh-CN.toml
+++ b/config/_default/languages.zh-CN.toml
@@ -19,7 +19,7 @@ dateFormat = "2 January 2006"
   name = "Vincent Lu"
   image = "img/avatar.png"
   headline = "晚星照亮更广阔的夜空。"
-  bio = "在科技的浪潮下踏上疗愈你我心灵的成长之旅"
+  bio = "在科技的浪潮中找到一处落脚的岛屿。"
    links = [
      { github = "https://github.com/vincentluting/vincentluting.github.io" },
      { linkedin = "https://www.linkedin.com/in/ting-lu-vincent/" },
