--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -24,6 +24,13 @@
   # url = "/about"
   weight = 50
 
+[[main]]
+  # pre = "circle-info"
+  name = "Notes"
+  pageRef = "notes"
+  # url = "/about"
+  weight = 15
+
 # [[main]]
   # pre = "circle-info"
   # name = "Notes"
