--- a/config/_default/languages.zh-CN.toml
+++ b/config/_default/languages.zh-CN.toml
@@ -13,7 +13,7 @@ contentDir = 'content/cn'
   description = "O meu website awesome"
   # copyright = "Copy, _right?_ :thinking_face:"
 
-dateFormat = "2 January 2006"
+dateFormat = "January 2 2006"
 
 [params.author]
   name = "Vincent Lu"
