--- a/config/_default/languages.en.toml
+++ b/config/_default/languages.en.toml
@@ -21,4 +21,5 @@ contentDir = 'content/en'
   bio = "Finding an island to anchor in the waves of technology."
    links = [
      { linkedin = "https://www.linkedin.com/in/ting-lu-vincent/" },
+     { email = "mailto:vincentluting@gmail.com" },
    ]
