--- a/config/_default/menus.en.toml
+++ b/config/_default/menus.en.toml
@@ -12,9 +12,8 @@
 
 [[main]]
   # pre = "list"
-  name = "Blog"
-  pageRef = "posts"
-  # url = "/posts"
+  name = "AI"
+  pageRef = "AI blogs"
   weight = 10
 
 [[main]]
