--- a/config/_default/menus.zh-CN.toml
+++ b/config/_default/menus.zh-CN.toml
@@ -12,8 +12,8 @@
 
 [[main]]
   # pre = "list"
-  name = "博客"
-  pageRef = "posts"
+  name = "AI"
+  pageRef = "AI博客"
   # url = "/posts"
   weight = 10
 
